[project]
name = "siege-be"
version = "0.0.0"
description = "Backend application of personal website"
authors = [
    {name = "Siege Songsong",email = "cjgsongsong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
