[project]
name = "siege-be"
version = "0.0.0"
description = "Backend application of personal website"
authors = [
    {name = "Siege Songsong",email = "cjgsongsong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "typeguard (>=4.5.2,<5.0.0)"
]
